data/derived/sp14/progs/unify/prog1809.ml.out
Characters 61-62:
  factorial ( x -. 1.0) ( x *. acc );;
              ^
Error: This expression has type int but an expression was expected of type
         float
